@@ -39,7 +39,7 @@ CREATE MEMORY TABLE PUBLIC.ART_ADMIN_PRIVILEGES(USERNAME VARCHAR(15) NOT NULL,PR
 CREATE MEMORY TABLE PUBLIC.ART_USER_QUERIES(USERNAME VARCHAR(15) NOT NULL,QUERY_ID INTEGER NOT NULL,CNT1 INTEGER,UPDATE_DATE DATE,OTH1 VARCHAR(20),ART_FLAG VARCHAR(1),PRIMARY KEY(USERNAME,QUERY_ID))
 CREATE MEMORY TABLE PUBLIC.ART_USER_QUERY_GROUPS(USERNAME VARCHAR(15) NOT NULL,QUERY_GROUP_ID INTEGER NOT NULL,CNT1 INTEGER,NUM1 DOUBLE,OTH1 VARCHAR(20),ART_FLAG VARCHAR(1),PRIMARY KEY(USERNAME,QUERY_GROUP_ID))
 CREATE MEMORY TABLE PUBLIC.ART_QUERY_GROUPS(QUERY_GROUP_ID INTEGER NOT NULL PRIMARY KEY,CHILD_GROUP_ID INTEGER,NAME VARCHAR(25) NOT NULL,DESCRIPTION VARCHAR(60) NOT NULL,CNT1 INTEGER,NUM1 DOUBLE,OTH1 VARCHAR(20),ART_FLAG VARCHAR(1))
-CREATE MEMORY TABLE PUBLIC.ART_QUERIES(QUERY_GROUP_ID INTEGER NOT NULL,QUERY_ID INTEGER NOT NULL PRIMARY KEY,NAME VARCHAR(25) NOT NULL,SHORT_DESCRIPTION VARCHAR(254) NOT NULL,DESCRIPTION VARCHAR(2000) NOT NULL,DATABASE_ID INTEGER NOT NULL,UPDATE_DATE DATE,TEMPLATE VARCHAR(100),XMLA_URL VARCHAR(300),XMLA_DATASOURCE VARCHAR(50),XMLA_CATALOG VARCHAR(50),X_AXIS_LABEL VARCHAR(2000),Y_AXIS_LABEL VARCHAR(50),GRAPH_OPTIONS VARCHAR(200),QUERY_TYPE INTEGER,CONTACT_PERSON VARCHAR(20),ACTIVE_STATUS VARCHAR(1),USES_RULES VARCHAR(1),XMLA_USERNAME VARCHAR(50),XMLA_PASSWORD VARCHAR(50),SHOW_PARAMETERS VARCHAR(1),DISPLAY_RESULTSET INTEGER)
+CREATE MEMORY TABLE PUBLIC.ART_QUERIES(QUERY_GROUP_ID INTEGER NOT NULL,QUERY_ID INTEGER NOT NULL PRIMARY KEY,NAME VARCHAR(50) NOT NULL,SHORT_DESCRIPTION VARCHAR(254) NOT NULL,DESCRIPTION VARCHAR(2000) NOT NULL,DATABASE_ID INTEGER NOT NULL,UPDATE_DATE DATE,TEMPLATE VARCHAR(100),XMLA_URL VARCHAR(300),XMLA_DATASOURCE VARCHAR(50),XMLA_CATALOG VARCHAR(50),X_AXIS_LABEL VARCHAR(2000),Y_AXIS_LABEL VARCHAR(50),GRAPH_OPTIONS VARCHAR(200),QUERY_TYPE INTEGER,CONTACT_PERSON VARCHAR(20),ACTIVE_STATUS VARCHAR(1),USES_RULES VARCHAR(1),XMLA_USERNAME VARCHAR(50),XMLA_PASSWORD VARCHAR(50),SHOW_PARAMETERS VARCHAR(1),DISPLAY_RESULTSET INTEGER)
 CREATE MEMORY TABLE PUBLIC.ART_QUERY_FIELDS(QUERY_ID INTEGER NOT NULL,FIELD_POSITION INTEGER NOT NULL,NAME VARCHAR(25) NOT NULL,SHORT_DESCRIPTION VARCHAR(40) NOT NULL,DESCRIPTION VARCHAR(120) NOT NULL,DEFAULT_VALUE VARCHAR(80),EXACT_MATCH_FLAG VARCHAR(1),QUERY_DATABASE_FLAG VARCHAR(1),UPDATE_DATE DATE,DRILLDOWN_COLUMN INTEGER,CHAINED_VALUE_POSITION INTEGER,USE_LOV VARCHAR(1),PARAM_TYPE VARCHAR(1),PARAM_LABEL VARCHAR(55),APPLY_RULES_TO_LOV VARCHAR(1),LOV_QUERY_ID INTEGER,CHAINED_PARAM_POSITION INTEGER,PARAM_DATA_TYPE VARCHAR(15),DIRECT_SUBSTITUTION VARCHAR(1),PRIMARY KEY(QUERY_ID,FIELD_POSITION))
 CREATE INDEX QUERY_FIELDS_INDX ON PUBLIC.ART_QUERY_FIELDS(QUERY_ID)
 CREATE MEMORY TABLE PUBLIC.ART_ALL_SOURCES(OBJECT_ID INTEGER NOT NULL,LINE_NUMBER INTEGER NOT NULL,SOURCE_INFO VARCHAR(4000),PRIMARY KEY(OBJECT_ID,LINE_NUMBER))
